# tapa_copy

apps/cnn/: CMakeLists.txt  cnn-host.cpp  cnn.cpp  cnn.h  link_config.ini  run_tapa.sh
apps/vadd/: CMakeLists.txt  vadd-host.cpp  vadd.cpp
